Fix the OpenAPI specification
